// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculator should render 1`] = `
<div
  className="calcContainer"
>
  <div>
    <h2>
      Do some math,
      Buddy
    </h2>
  </div>
  <div
    className="caclResult"
    data-testid="result"
  />
  <div
    className="calcNumbers"
  >
    <label>
      Numbers
    </label>
    <div>
      <input
        data-testid="first"
        onChange={[Function]}
        placeholder="First Number"
        value=""
      />
    </div>
    <div>
      <input
        data-testid="second"
        onChange={[Function]}
        placeholder="Second Number"
        value=""
      />
    </div>
  </div>
  <div
    className="caclFunctions"
  >
    <button
      data-testid="button-add"
      key="add"
      onClick={[Function]}
      type="button"
    >
      +
    </button>
    <button
      data-testid="button-subtract"
      key="subtract"
      onClick={[Function]}
      type="button"
    >
      -
    </button>
    <button
      data-testid="button-multiply"
      key="multiply"
      onClick={[Function]}
      type="button"
    >
      *
    </button>
    <button
      data-testid="button-divide"
      key="divide"
      onClick={[Function]}
      type="button"
    >
      /
    </button>
  </div>
</div>
`;

exports[`calculator should update props 1`] = `
<Calculator
  name="Mike"
>
  <div
    className="calcContainer"
  >
    <div>
      <h2>
        Do some math,
        Mike
      </h2>
    </div>
    <div
      className="caclResult"
      data-testid="result"
    />
    <div
      className="calcNumbers"
    >
      <label>
        Numbers
      </label>
      <div>
        <input
          data-testid="first"
          onChange={[Function]}
          placeholder="First Number"
          value=""
        />
      </div>
      <div>
        <input
          data-testid="second"
          onChange={[Function]}
          placeholder="Second Number"
          value=""
        />
      </div>
    </div>
    <div
      className="caclFunctions"
    >
      <button
        data-testid="button-add"
        key="add"
        onClick={[Function]}
        type="button"
      >
        +
      </button>
      <button
        data-testid="button-subtract"
        key="subtract"
        onClick={[Function]}
        type="button"
      >
        -
      </button>
      <button
        data-testid="button-multiply"
        key="multiply"
        onClick={[Function]}
        type="button"
      >
        *
      </button>
      <button
        data-testid="button-divide"
        key="divide"
        onClick={[Function]}
        type="button"
      >
        /
      </button>
    </div>
  </div>
</Calculator>
`;
